mlir/test/Dialect/Lattice/invalid/missing_entry_function.mlir
// Invalid: executable artifacts require one @forward function.
module attributes {
  lattice.ir_version = 0,
  lattice.weight_file = "weights.safetensors"
} {
}
